--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,31 @@
 body {
-    z-index: 90;
-    background-color:darkslategrey;
+    position: relative;
+    background-image: url("./content/spacegif_1.gif");
+    background-repeat: repeat;
+    background-size: cover;
+    
 }
 
 main {
-    z-index: 1;
-    background-color: grey;
+    z-index: 80;
+    background-color:rgba(59, 52, 52, 0.5);
     width: 50%;
     margin: 0 auto;
 }
+
+h1, h2, h3 {
+    color: white;
+    font-family: 'Cinzel', serif;
+}
+
+footer {
+    color: white;
+    background-color: purple;
+    width: 50%;
+    margin: auto;
+    
+}
+
 
 .banner {
     color: white;
@@ -17,5 +34,29 @@ main {
 }
 
 .tech {
+    text-align: center;
+}
+
+#backgroundgif {
+    position: fixed;
+    z-index: 1;
+    width: 50%;
+    
+}
+
+#mindblown {
+    position: fixed;
+    width: 20%;
+    opacity: 70%;
+}
+
+#tomcardy {
+    position: fixed;
+    height: 3%;
+    padding-top: 6cm;
+}
+
+#linkedin {
+    color: ivory;
     text-align: center;
 }
