--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,16 @@
 body {
   position: relative;
-  background-image: url("./content/spacegif_1.gif");
+  background-image: url("./content/tavern.gif");
   background-repeat: repeat;
-  background-size: cover;
+  background-size: 80%;
 }
 
 main {
   z-index: 80;
-  background-color: rgba(59, 52, 52, 0.5);
+  background-color: rgba(59, 52, 52, 0.95);
   width: 50%;
   margin: 0 auto;
+  margin-top: 5rem;
 }
 
 h1,
@@ -21,14 +22,14 @@ h3 {
 
 footer {
   color: white;
-  background-color: purple;
+  background-color: rgb(92, 43, 92);
   width: 50%;
   margin: auto;
+  text-align: center;
 }
 
 .banner {
   color: white;
-  margin: 10px;
   text-align: center;
 }
 
@@ -56,5 +57,10 @@ footer {
 
 #linkedin {
   color: ivory;
-  text-align: center;
+  
 }
+
+#linkedin:hover {
+    color: orangered;
+    
+  }
