--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* General Elements */
+
 body {
   position: relative;
   background-image: url("./content/tavern.gif");
@@ -24,7 +26,7 @@ h4 {
   text-align: center;
 }
 
-h1{
+h1 {
   padding-top: 1rem;
 }
 
@@ -38,11 +40,7 @@ footer {
   opacity: 0.8;
 }
 
-p {
-  line-height: 2rem;
-  text-align: center;
-}
-
+/* General Classes ============================*/
 .roadmap {
   color: white;
 }
@@ -56,32 +54,7 @@ p {
   text-align: center;
   padding: 1rem;
 }
-
-#backgroundgif {
-  position: fixed;
-  z-index: 1;
-  width: 50%;
-}
-
-#mindblown {
-  position: fixed;
-  width: 20%;
-  opacity: 70%;
-}
-
-#tomcardy {
-  position: fixed;
-  height: 3%;
-  padding-top: 6cm;
-}
-/* Avatar */
-#watermark_me {
-  box-shadow: 3px 3px 5px black;
-  border-radius: 50%;
-  height: 125px;
-  width: 125px;
-}
-/* Technologies */
+/* Technologies ==============================*/
 #logo_1 {
   font-size: 400%;
 }
@@ -96,16 +69,80 @@ p {
 /* Footer */
 #linkedin {
   color: ivory;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 #linkedin:hover {
   color: orangered;
-  background-color: rgba(238, 161, 110, 0.2);
   padding: 5px;
-  border-radius: 50%;
 }
 
-#linkedin:visited{
-  color:rgb(250, 115, 243);
+#linkedin:visited {
+  color: rgb(250, 115, 243);
 }
+/* ========================================= */
+/* Avatar ==================================*/
+#watermark_me {
+  box-shadow: 3px 3px 5px black;
+  border-radius: 50%;
+  margin-top: 10px;
+  height: 125px;
+  width: 125px;
+  transition: transform 0.2s;
+}
+
+#watermark_me:hover {
+  transform: scale(1.3);
+}
+/* ========================================= */
+/* Kanban */
+
+table.kanban_table {
+  margin: 0 auto;
+  border-collapse: collapse;
+  width: 450px;
+  height: 100px;
+  transition: transform 0.2s;
+}
+
+table.kanban_table:hover {
+  transform: scale(1.3);
+}
+
+.kanban_info_markers > th {
+  border: none;
+  font-family: "Cinzel";
+  font-weight: bold;
+}
+
+#to-do {
+  background-color: rgba(207, 180, 26, 0.95);
+}
+
+#to-do:hover {
+  background-color: rgba(235, 211, 80, 0.95);
+}
+
+#progress {
+  background-color: rgba(63, 118, 199, 0.95);
+}
+
+#progress:hover {
+  background-color: rgba(77, 139, 231, 0.95);
+}
+
+#done {
+  background-color: rgba(8, 129, 34, 0.95);
+  padding: 0 25px;
+}
+
+#done:hover {
+  background-color: rgba(17, 155, 47, 0.95);
+}
+
+.kanban_ongoing_markers > td {
+  border: none;
+  background-color: rgba(153, 153, 153, 0.377);
+  text-align: center;
+}
+/* ========================================= */
