--- a/src/info.css
+++ b/src/info.css
@@ -5,7 +5,6 @@ body {
   background-repeat: repeat;
   background-size: 80%;
   background-position-y: -4rem;
-  justify-content: center;
 }
 
 main {
@@ -43,6 +42,7 @@ h1 {
 /* General Classes ============================*/
 .roadmap {
   color: white;
+  
 }
 
 .banner {
@@ -97,9 +97,16 @@ h1 {
 #watermark_me:hover {
   transform: scale(1.3);
 }
+
+/* New Kanban Table */
+.table_markers{
+
+}
+
+
 /* ========================================= */
 /* Kanban */
-table.kanban_table {
+/* table.kanban_table {
   margin: 0 auto;
   border-collapse: collapse;
   width: 450px;
@@ -149,5 +156,5 @@ table.kanban_table:hover {
   border: none;
   background-color: rgba(153, 153, 153, 0.377);
   text-align: center;
-}
-/* ========================================= */
+} */
+/* =========================================  */
