--- a/src/dev_index_styles.css
+++ b/src/dev_index_styles.css
@@ -76,7 +76,6 @@ nav:hover {
 .right:hover {
   background-color: rgba(128, 128, 128, 0.247);
   transform: scale(1.02);
-  
 }
 
 header,
@@ -90,7 +89,7 @@ footer {
   top: 0;
   left: 0;
   min-width: 100%;
-  min-height: 100%
+  min-height: 100%;
 }
 
 /* Footer & Technologies ==============================*/
@@ -103,12 +102,12 @@ footer {
   gap: 80px;
   color: #c9c9c9;
   transition: 0.5s ease-out;
+  
 }
 
 footer:hover {
   background-color: rgba(128, 128, 128, 0.247);
   transform: scale(1.02);
-  
 }
 
 footer h2 {
@@ -128,17 +127,16 @@ footer h2 {
 /* Footer */
 .social-media {
   text-align: center;
+
 }
 
 a.linkedin {
   color: #0077b5;
   cursor: pointer;
-  
 }
 
 .fa-linkedin {
   font-size: 56px;
-
 }
 
 .linkedin:hover {
@@ -148,6 +146,6 @@ a.linkedin {
 }
 
 .linkedin:active {
-  color: #0077b5;;
+  color: #0077b5;
 }
 /* ========================================= */
