--- a/src/dev_index_styles.css
+++ b/src/dev_index_styles.css
@@ -96,6 +96,39 @@ footer {
   min-height: 100%;
 }
 
+#watermark_me {
+  box-shadow: 3px 3px 5px black;
+  border-radius: 50%;
+  height: 125px;
+  width: 125px;
+  margin: 10px 10px;
+  transition: 0.5s ease-out;
+}
+
+#watermark_me:hover {
+  border-radius: 30%;
+  transform: scale(1.1);
+}
+
+#github {
+  box-shadow: 3px 3px 5px black;
+  width: 100%;
+  border-radius: 1%;
+  transition: 0.5s ease-out;
+}
+
+#github:hover {
+  transform: scale(1.05);
+  box-shadow: 3px 3px 5px black;
+  width: 100%;
+  border-radius: 1%;
+  cursor: pointer;
+}
+
+#youtubevideo1 {
+  width: 100%;
+}
+
 /* Footer & Technologies ==============================*/
 footer {
   background-color: rgba(128, 128, 128, 0.137);
@@ -158,7 +191,6 @@ a.linkedin {
   footer {
     gap: 10px;
   }
-
 }
 /* Even smaller Devices */
 @media only screen and (max-width: 340px) {
