--- a/src/development-index.css
+++ b/src/development-index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
   font-family: "Pixeboy";
   src: url(./fonts/Pixeboy-z8XGD.ttf);
