--- a/src/styles.css
+++ b/src/styles.css
@@ -6,10 +6,16 @@
   font-family: "Pixeboy";
   src: url(./fonts/Pixeboy-z8XGD.ttf);
 }
+@font-face {
+  font-family: "Prototype";
+  src: url(./fonts/Prototype.ttf);
+}
+
 
 body {
   margin: 0;
   padding: 0;
+  font-family: Pixeboy;
 }
 
 main {
@@ -87,12 +93,42 @@ header:hover {
   grid-area: right;
   transition: 0.5s ease-out;
   border-radius: 1%;
+  text-overflow: ellipsis;
+
+  /* Required for text-overflow to do anything */
+  overflow: scroll;
+}
+
+.right::-webkit-scrollbar {
+  display:none;
 }
 
 .right:hover {
-  background-color: rgba(128, 128, 128, 0.247);
+  background-color: rgba(128, 128, 128, 0.547);
   box-shadow: 0 0 10px 3px rgba(255, 254, 218, 0.253);
   transform: scale(1.02);
+}
+
+.right h2 {
+  color: #c9c9c9;
+  text-shadow: 4px 4px black;
+  letter-spacing: 2px;
+  line-height: 1.1rem;
+  font-size: 3rem;
+  text-align: right;
+  margin: 1rem 0.5rem;
+  min-width: 200px;
+
+}
+
+.right p {
+  color: #c9c9c9;
+  text-shadow: 2px 2px black;
+  letter-spacing: 2px;
+  line-height: 1.6rem;
+  font-size: 1.2rem;
+  margin: 1rem 0.5rem;
+  font-family: Prototype, sans-serif, Arial;
 }
 
 #wallpapervideo {
@@ -193,15 +229,25 @@ a.linkedin {
 
 /* Phones */
 @media only screen and (max-width: 480px) {
+  .space-invader {
+    display: none;
+  }
+  
   footer {
     gap: 10px;
   }
 }
 /* Even smaller Devices */
 @media only screen and (max-width: 340px) {
-  .logo-1,
-  .logo-2,
-  .logo-3 {
+
+  .myname {
+    display: none;
+  }
+
+
+  .right h2 {
+    min-width: 100px;
+    line-height: 2rem;
   }
 
   .tech h2,
