--- a/src/styles.css
+++ b/src/styles.css
@@ -58,7 +58,20 @@ header {
   position: absolute;
   width: 18rem;
   margin: 2.5rem 10rem;
+
+  /* -webkit-animation: mover 1s infinite  alternate; */
+  animation: mover 1s steps(3) infinite alternate;
 }
+
+@-webkit-keyframes mover {
+  from { top: 15px; bottom: 0px; }
+  to   { bottom: 0; top: -20px; }
+}
+/* 
+@keyframes mover {
+0% { transform: translateY(10px); }
+100% { transform: translateY(-20px); }
+} */
 
 header h1.myname {
   z-index: 11;
