--- a/src/styles.css
+++ b/src/styles.css
@@ -42,14 +42,14 @@ h2 {
   text-align: center;
   letter-spacing: 2px;
 }
-/* HEADER SECTION */
+/* HEADER SECTION ==================================*/
 header {
   background-color: rgba(128, 128, 128, 0.137);
   grid-area: header;
   transition: 0.5s ease-out;
   border-radius: 1%;
   display: flex;
-  text-align: center;
+ 
  
 }
 
@@ -70,18 +70,34 @@ header {
 
 header h1.myname {
   z-index: 11;
-  text-shadow: 4px 5px black;
+  text-shadow: 2px 2px 5px #FF0000, 0 0 5px #0000FF;
   font-size: 3rem;
   color:#c9c9c9;
   margin: auto 0;
 }
 
-/* =================================================== */
+
 header:hover {
   background-color: rgba(128, 128, 128, 0.247);
   box-shadow: 0 0 10px 3px rgba(255, 254, 218, 0.253);
   transform: scale(1.02);
 }
+
+h2.home {
+  display: flex;
+  text-shadow: 2px 2px 5px #FF0000, 0 0 5px #0000FF;
+  font-size: 2.3rem;
+  color:#c9c9c9;
+  margin: auto;
+  margin-left: 8rem;
+  transition: 0.5s ease-out;
+}
+
+h2.home:hover {
+  transform: scale(1.3);
+}
+
+/* =================================================== */
 
 .left {
   background-color: rgba(128, 128, 128, 0.137);
@@ -119,7 +135,7 @@ header:hover {
 
 .right h2 {
   color: #c9c9c9;
-  text-shadow: 4px 4px black;
+  text-shadow: 2px 2px 5px #FF0000, 0 0 5px #0000FF;
   letter-spacing: 2px;
   line-height: 1.1rem;
   font-size: 3rem;
@@ -202,6 +218,7 @@ footer h2 {
 }
 
 .tech {
+  text-shadow: 2px 2px 5px #FF0000, 0 0 5px #0000FF;
   text-align: center;
 }
 
@@ -212,6 +229,7 @@ footer h2 {
 }
 /* Footer */
 .social-media {
+  text-shadow: 2px 2px 5px #FF0000, 0 0 5px #0000FF;
   text-align: center;
 }
 
