--- a/src/styles.css
+++ b/src/styles.css
@@ -19,15 +19,14 @@ body {
   height: 100vh;
   width: 100%;
   top: 0;
-  left: 0
+  left: 0;
 }
-
-
 
 .container {
   z-index: 1;
   display: grid;
   margin: 7rem auto;
+
   max-width: 700px;
   position: relative;
   gap: 10px;
@@ -89,19 +88,20 @@ header:hover {
   transform: scale(1.02);
 }
 
-h2.home {
+/* h2.home {
   display: flex;
   text-shadow: 2px 2px 5px #ff0000, 0 0 5px #0000ff;
   font-size: 2.3rem;
   color: #c9c9c9;
-  margin: auto;
-  margin-left: 8rem;
+  margin: auto 20%;
+  margin-left: 20%;
+
   transition: 0.5s ease-out;
 }
 
 h2.home:hover {
   transform: scale(1.3);
-}
+} */
 
 /* =================================================== */
 
@@ -171,11 +171,9 @@ h2.home:hover {
   display: flex;
   position: absolute;
 
-
   margin-top: 0;
   min-width: 100%;
   min-height: 100%;
- 
 }
 
 #watermark_me {
@@ -286,7 +284,19 @@ a.linkedin {
 /* ========================================= */
 
 /* Phones */
+
+@media only screen and (max-width: 800px) {
+  .container {
+    width: 80%;
+  }
+  .space-invader {
+    display: none;
+  }
+}
 @media only screen and (max-width: 480px) {
+  .container {
+    width: 80%;
+  }
   .space-invader {
     display: none;
   }
